--- a/bootcamps/1-Potencia-Tech-Angular-Developer-Powered-by-iFood/1-primeiras-paginas-interativas-javascript/8-projeto-listagem-pokemon/index.html
+++ b/bootcamps/1-Potencia-Tech-Angular-Developer-Powered-by-iFood/1-primeiras-paginas-interativas-javascript/8-projeto-listagem-pokemon/index.html
@@ -16,14 +16,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Roboto:wght@300;500;700&display=swap"
     rel="stylesheet">
   <!-- CSS -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/global.css">
 </head>
 
 <body>
 
-  <h1>Teste</h1>
-  <script src="./assets/js/main.js"></script>
-</body>
+  <section class="content">
+    <h1>Pokedex</h1>
 
+    <ol id="pokemonList" class="pokemons">
+      <!-- ..... Pokemons here ..... -->
+    </ol>
+
+    <div class="pagination">
+      <button id="loadMoreButton" type="button">
+        Load More
+      </button>
+    </div>
+  </section>
+
+  <script src="/assets/js/pokemon-model.js"></script>
+  <script src="/assets/js/poke-api.js"></script>
+  <script src="/assets/js/main.js"></script>
+</body>
 
 </html>
